feat(app.html-app.ts-user): Creamos un componente User- Resolver el uso de componentes mediante angular

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,4 +7,6 @@
 <p>Hola {{informacion.toUpperCase()}}</p>
 
 <p>Podemos ejecutar codigo javaScript {{1-1}}</p>
+
+<app-user></app-user>
 <!--- <router-outlet /> -->
